modified gitignore to included more missing scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
-data/
-log/
-eval/
+/data/
+pycurvis/log/
+!pycurvis/log/*.py
+!pycurvis/log/*.ipynb
+
+pycurvis/eval/
+!pycurvis/eval/*.py
+!pycurvis/eval/*.ipynb
