--- a/pycurvis/cfg/nn_block_half.yaml
+++ b/pycurvis/cfg/nn_block_half.yaml
@@ -9,11 +9,11 @@ model: {
   type: 'mlp_pe',
   param: {
     in_dim: 3,
-    hidden_dims: [24, 24, 24, 24],
+    hidden_dims: [64, 128, 256, 128, 24],
     out_dim: 3,
-    pe_dim: 8,
+    pe_dim: 32,
   },
-  log_dir: 'log/coord_mlp_block',
+  log_dir: 'log/coord_mlp_block_half',
 }
 
 # VBH Grid.npy features:
@@ -28,6 +28,7 @@ dataset: {
     data_path: "../data/earth_nopole.npy",
     curv_idx: [0,1,2],
     cart_idx: [3,4,5],
+    downscale: 2,
   },
   train_split: 0.8,
   valid_split: 0.2,
@@ -47,17 +48,17 @@ dataset: {
 # 2^21: 2097152
 # 2^22: 4194304
 train: {
-  max_epoch: 1500,
+  max_epoch: 10000,
   batch: 2097152,
   # batch_log_step: step between batch number to save model
   batch_log_step: 9999999999,
   # log_step: step between epoch number to save model
-  log_step: 10,
+  log_step: 30,
   resume: {
-    ckpt: ckpt_919_000_4.55e-04,
+    ckpt: ckpt_7963_127_2.48e-06,
   }
 }
 
 logs: {
-  mlp_pe: 'log/coord_mlp_block',
+  mlp_pe: 'log/coord_mlp_block_half',
 }
